--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -2,11 +2,15 @@
 <h3>Accounts:</h3>
 <ul>
   <% @role.users.each do |user| %>
-    <li><%= user.user_key %></li>
+    <li><%= user.user_key %>
+      <% if can? :remove_user, Role %>
+        <%= button_to "Remove User", role_management.role_user_path(@role, user), :method=>:delete %>
+      <% end %>
+    </li>
   <% end %>
 </ul>
 <h3>Add a new account:</h3>
-<%= form_tag role_management.add_user_role_path(@role) do %>
+<%= form_tag role_management.role_users_path(@role) do %>
   <%= label_tag 'user_key', 'User' %>
   <%= text_field_tag 'user_key' %>
   <%= submit_tag "Add" %>
