--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -4,14 +4,13 @@
   <% @role.users.each do |user| %>
     <li><%= user.user_key %>
       <% if can? :remove_user, Role %>
-        <%= button_to "Remove User", role_management.role_user_path(@role, user), :method=>:delete %>
+        <%= button_to "Remove User", role_management.role_user_path(@role, user), :method=>:delete, :class=>'btn btn-danger' %>
       <% end %>
     </li>
   <% end %>
 </ul>
 <h3>Add a new account:</h3>
-<%= form_tag role_management.role_users_path(@role) do %>
-  <%= label_tag 'user_key', 'User' %>
-  <%= text_field_tag 'user_key' %>
-  <%= submit_tag "Add" %>
+<%= bootstrap_form_tag role_management.role_users_path(@role) do %>
+  <%= bootstrap_text_field_tag 'user_key', '', :label=>'User' %>
+  <%= bootstrap_submit_tag "Add" %>
 <% end %>
