--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,5 +1,5 @@
 <%= bootstrap_form_for @role, :url=>role_management.roles_path do |f| %>
   <%= f.text_field :name, :label=> 'Role name' %>
-  <%= f.submit %>
+  <%= f.actions %>
 <% end %>
 
