--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,5 +1,6 @@
 <%= bootstrap_form_for @role, :url=>role_management.roles_path do |f| %>
   <%= f.text_field :name, :label=> 'Role name' %>
-  <%= f.actions %>
+  <%= f.submit "Add" %>
+  <%= link_to "Cancel", role_management.roles_path, :class => 'btn btn-default' %>
 <% end %>
 
