--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -1,9 +1,9 @@
 <h2>Role:</h2>
 <%= bootstrap_form_for @role, :url=>role_management.role_path(@role) do |f| %>
   <%= f.text_field :name, :label=> 'Role name' %>
-  <%= f.actions do %>
+
     <%= f.submit "Update" %>
-  <% end %>
+
 <% end %>
 <% if can? :destroy, Role %>
   <%= button_to "Delete", role_management.role_path(@role), :method=>:delete, :class=>'btn btn-danger' %>
@@ -19,10 +19,8 @@
   <% end %>
 </ul>
 <h3>Add a new account:</h3>
-<%= bootstrap_form_tag role_management.role_users_path(@role) do %>
-  <%= bootstrap_text_field_tag 'user_key', '', :label=>'User' %>
-  <%= bootstrap_actions do %>
-    <%= bootstrap_submit_tag "Add" %>
-    <%= bootstrap_cancel_tag %>
-  <% end %>
+<%= bootstrap_form_tag :url=> role_management.role_users_path(@role) do |f| %>
+  <%= f.text_field 'user_key', :label=>'User' %>
+  <%= f.submit "Add" %>
+  <%= link_to "Cancel", role_management.roles_path, :class => 'btn btn-default' %>
 <% end %>
